# de-roadmap

./: .gitignore  AGENTS.md  CNAME  COMMIT_RULES.md  LICENSE  README.md  SCD.md  dwh-modeling-basics.md  dwh-modeling-ds.md  lychee.toml  mkdocs.yml
.github/workflows/: check-links.yml  deploy-site.yml
ai-dev/: README.md  best-practice.md  memory-mechanism.md
airflow-greenplum/: .env.example  .gitignore  AGENTS.md  GREENPLUM_CLUSTER_README.md  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
airflow-greenplum/airflow/: requirements.txt
airflow-greenplum/airflow/dags/: csv_to_greenplum.py  data_quality_greenplum.py  kafka_to_greenplum.py
airflow-greenplum/airflow/dags/helpers/: greenplum.py
airflow-greenplum/greenplum/config/: gpinitsystem_config  hostfile  init_cluster.sh  segment_hostfile
airflow-greenplum/sql/: ddl_gp.sql
airflow-greenplum/tests/: conftest.py  test_dags_smoke.py  test_greenplum_helpers.py
dwh-modeling/: DataVault.md  Homework_Customer_Status_DDS_DM.md  README.md  SCD.md  TODO.md  dimensions_sample.sql  dwh-modeling-basics.md  dwh-modeling-ds.md  dwh-modeling-plan3.md
dwh-modeling/data/: customer_status_events.csv  customer_status_events_increment.csv  customers.csv  order_items.csv  orders.csv  prices.csv  products.csv
dwh-modeling/sql/: 01_ddl.sql  01_ddl_stg-dds.sql  02_dim.sql  02_dml_stg-dds.sql  03_demo_increment.sql  03_validation.sql  04_validation.sql  (+5 more)
overrides/: main.html
postgres-bookings/: .gitignore  README.md  docker-compose.yml  download_db.sh  psql_sh
project/: ADR.md  PRD.md  TODO.md
