[project]
name = "airflow-greenplum"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
    "apache-airflow==2.9.2",
    "apache-airflow-providers-postgres==5.11.1",
    "black==24.4.2",
    "isort>=7.0.0",
    "pandas==2.1.4",
    "psycopg2-binary==2.9.9",
    "pytest==7.4.4",
]
